--- a/index.html
+++ b/index.html
@@ -4,18 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Flashcard</title>
 </head>
 <body>
 <main>
     <section id="container">
-        
+      <article class="cartao">
+        <div class="cartao_conteudo">
+           <h3>Programação</h3>
+           <div class="cartao_conteudo_pergunta">
+              O que é JavaScript
+           </div>
+           <div class="carta_conteudo_resposta">
+              O JavaScript é uma linguagem de programação
+           </div>
+        </div>
+      </article>
+      <article class="cartao">
+        <div class="cartao_conteudo">
+           <h3>Programação</h3>
+           <div class="cartao_conteudo_pergunta">
+              O que é CSS
+           </div>
+           <div class="carta_conteudo_resposta">
+              O CSS é uma linguagem de estilização
+           </div>
+        </div>
+      </article>
     </section>
-
 </main>
-<font>
-  <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
 
-</font>    
+<footer>
+  <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+</footer>    
 </body>
 </html>
