--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="cartao_conteudo">
            <h3>Programação</h3>
            <div class="cartao_conteudo_pergunta">
-              O que é JavaScript
+              <p>O que é JavaScript</p>
            </div>
-           <div class="carta_conteudo_resposta">
-              O JavaScript é uma linguagem de programação
+           <div class="cartao_conteudo_resposta">
+              <p>O JavaScript é uma linguagem de programação</p>
            </div>
         </div>
       </article>
@@ -25,13 +25,24 @@
         <div class="cartao_conteudo">
            <h3>Programação</h3>
            <div class="cartao_conteudo_pergunta">
-              O que é CSS
+              <p>O que é CSS</p>
            </div>
-           <div class="carta_conteudo_resposta">
-              O CSS é uma linguagem de estilização
+           <div class="cartao_conteudo_resposta">
+            <p>O CSS é uma linguagem de estilização</p>
            </div>
         </div>
       </article>
+      <article class="cartao">
+         <div class="cartao_conteudo">
+            <h3>Programação</h3>
+            <div class="cartao_conteudo_pergunta">
+               <p>O que é CSS</p>
+            </div>
+            <div class="cartao_conteudo_resposta">
+             <p>O CSS é uma linguagem de estilização</p>
+            </div>
+         </div>
+       </article>
     </section>
 </main>
 
